--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,34 +1,19 @@
-FROM ubuntu:22.04
+FROM docker.io/alpine:3.21
 
-ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update \
-    && apt-get -y install --no-install-recommends apt-utils git procps texlive-full openssh-server curl build-essential
+# Install required packages
+RUN apk update && apk add --no-cache \
+    git \
+    texlive-full \
+    openssh \
+    && rm -rf /var/cache/apk/*
 
-# latexindent modules
-RUN curl -L http://cpanmin.us | perl - App::cpanminus \
-    && cpanm Log::Dispatch::File \
-    && cpanm YAML::Tiny \
-    && cpanm File::HomeDir \
-    && cpanm Unicode::GCString
+# # Install cpanminus and required Perl modules for latexindent
+# RUN curl -L http://cpanmin.us | perl - App::cpanminus \
+#     && cpanm Log::Dispatch::File \
+#     && cpanm YAML::Tiny \
+#     && cpanm File::HomeDir \
+#     && cpanm Unicode::GCString
 
-# Clean up
-RUN apt-get autoremove -y \
-    && apt-get clean -y \
-    && rm -rf /var/lib/apt/lists/*
-ENV DEBIAN_FRONTEND=dialog \
-    LANG=C.UTF-8 \
+# Set environment variables
+ENV LANG=C.UTF-8 \
     LC_ALL=C.UTF-8
-
-ARG USERNAME=vscode
-ARG USER_UID=1000
-ARG USER_GID=$USER_UID
-
-# Create the user
-RUN groupadd --gid $USER_GID $USERNAME \
-    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
-    && apt-get update \
-    && apt-get install -y sudo \
-    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
-    && chmod 0440 /etc/sudoers.d/$USERNAME
-    
-USER $USERNAME
